# SLAC-V2

./: CMakeLists.txt  README.md  espidf_source.bat  sdkconfig
main/: CMakeLists.txt  DS1307.c  DS1307.h  I2C_lib.c  I2C_lib.h  lcd_display.c  lcd_display.h  light_strip.c  light_strip.h  main.c  webserver.c  webserver.h
main/inc/: DS1307.h  I2C_lib.h  alarm_clock.h  lcd_display.h
main/src/: DS1307.c  I2C_lib.c  alarm_clock.c  lcd_display.c  webserver.c
main/web/: index.html
